# celery-task-queue-integration

./: .dockerignore  Dockerfile  client.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  worker.py
