[project]
name = "celery-task-queue-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "fastapi[standard]>=0.123.5",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
]
